--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -243,13 +243,25 @@ msgstr ""
 msgid "Fallout 4"
 msgstr ""
 
+msgid "Advanced"
+msgstr ""
+
 msgid "Game Data Path"
 msgstr ""
 
 msgid "Select the data path of the game..."
 msgstr ""
 
-msgid "Data path to load textures from and build files to."
+msgid "Data path to load textures from."
+msgstr ""
+
+msgid "Output Path"
+msgstr ""
+
+msgid "Select the output path..."
+msgstr ""
+
+msgid "Data path to build files to. If empty, Game Data Path will be used instead."
 msgstr ""
 
 msgid "General"
@@ -2390,7 +2402,9 @@ msgstr ""
 msgid "Color Paint\t7"
 msgstr ""
 
-msgid "Apply vertex colors.\nHold down the ALT key to remove colors."
+msgid ""
+"Apply vertex colors.\n"
+"Hold down the ALT key to remove colors."
 msgstr ""
 
 msgid "Alpha Paint"
@@ -2399,7 +2413,9 @@ msgstr ""
 msgid "Alpha Paint\t8"
 msgstr ""
 
-msgid "Apply vertex alpha.\nHold down the ALT key to remove alpha."
+msgid ""
+"Apply vertex alpha.\n"
+"Hold down the ALT key to remove alpha."
 msgstr ""
 
 msgid "Vertex Colors"
