--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 "X-Poedit-KeywordsList: _\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -583,11 +583,13 @@ msgstr "Rechts\tShift+4"
 msgid "Perspective\tShift+5"
 msgstr "Perspektive\tShift+5"
 
-msgid "Toggle Ghost Mode\tG"
-msgstr "Geistermodus\tG"
+msgid "Toggle Visibility\tG"
+msgstr "Sichtbarkeit umschalten"
 
-msgid "Show the active mesh in translucent mode."
-msgstr "Zeigt das aktuelle Mesh in einem durchsichtigen Modus an."
+msgid "Switch between the different visibility modes for the selected shapes."
+msgstr ""
+"Schaltet für die ausgewählten Modelle zwischen den verschiedenen "
+"Sichtbarkeitsmodi um."
 
 msgid "Show Wireframe\tW"
 msgstr "Gitternetz anzeigen\tW"
