--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -1654,7 +1654,19 @@ msgstr ""
 "Jeder Vertex der Referenz wird sein Weighting auf die nächste Sammlung an "
 "Vertices innerhalb des gegebenen Radius kopieren. Allerdings müssen manche "
 "Modelle trotzdem noch manuell bearbeitet werden, um Weighting abzubekommen "
-"oder gut zu funktionieren. Meistens genügen die Standardwerte."
+"oder gut damit zu funktionieren. Meist genügen die Standardwerte."
+
+msgid ""
+"Each vertex of the reference will copy its slider data to the nearest "
+"collection of vertices within the given radius. Bear in mind that some "
+"geometry will always require manual tweaking to become conformed and work "
+"well. Often, the default values are sufficient."
+msgstr ""
+"Jeder Vertex der Referenz wird seine Sliderdaten auf die nächste Sammlung an "
+"Vertices innerhalb des gegebenen Radius kopieren. Allerdings müssen manche "
+"Modelle trotzdem noch manuell bearbeitet werden, um die Sliderdaten "
+"abzubekommen oder gut damit zu funktionieren. Meist genügen die "
+"Standardwerte."
 
 msgid ""
 "Bone information incomplete. Exported data will not contain correct bone "
@@ -1663,6 +1675,15 @@ msgstr ""
 "Bone-Informationen sind unvollständig. Exportierte Daten werden keine "
 "korrekten Bone-Einträge besitzen! Stelle sicher, dass du eine Referenz vor "
 "dem Export geladen hast."
+
+msgid "No Target Limit"
+msgstr "Keine Ziellimitierung"
+
+msgid "Default"
+msgstr "Standard"
+
+msgid "Even Movement"
+msgstr "Glatte Bewegung"
 
 msgid "Export Warning"
 msgstr "Export Warnung"
