--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.2.4\n"
 "X-Poedit-KeywordsList: _\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -156,6 +156,9 @@ msgstr "Nichts auswählen"
 
 msgid "Select All"
 msgstr "Alle auswählen"
+
+msgid "Select All\tCtrl+A"
+msgstr "Alle auswählen\tCtrl+A"
 
 msgid "Enter preset name..."
 msgstr "Preset-Name eingeben..."
@@ -2923,3 +2926,15 @@ msgstr "Konnte Gruppendatei '%s' nicht öffnen!"
 
 msgid "Failed to copy group file '%s'!"
 msgstr "Konnte Gruppendatei '%s' nicht kopieren!"
+
+msgid "Edit..."
+msgstr "Bearbeiten..."
+
+msgid "Edit UV"
+msgstr "Texturkoordinaten bearbeiten"
+
+msgid "Edit the texture coordinates."
+msgstr "Bearbeitung der Texturkoordinaten."
+
+msgid "Box Selection"
+msgstr "Auswahlrechteck"
