Revert 871cb12 and add "Reset Transforms" menuitem

--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -501,6 +501,12 @@ msgstr ""
 msgid "Recalculate normals on active mesh"
 msgstr ""
 
+msgid "Reset Transforms"
+msgstr ""
+
+msgid "Resets the shape and skin transforms."
+msgstr ""
+
 msgid "View"
 msgstr ""
 
