--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.3\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -2539,4 +2539,13 @@ msgid "Edit the texture coordinates."
 msgstr ""
 
 msgid "Box Selection"
+msgstr ""
+
+msgid "You are trying to edit a slider's morph with that slider set to zero.  Do you wish to set the slider to one now?"
+msgstr ""
+
+msgid "Slot"
+msgstr ""
+
+msgid "X-Mirror Bone"
 msgstr ""
