--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.3\n"
 "X-Poedit-KeywordsList: _\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -2947,3 +2947,16 @@ msgstr "Bearbeitung der Texturkoordinaten."
 
 msgid "Box Selection"
 msgstr "Auswahlrechteck"
+
+msgid ""
+"You are trying to edit a slider's morph with that slider set to zero.  Do "
+"you wish to set the slider to one now?"
+msgstr ""
+"Sie versuchen einen Slider auf 0% zu bearbeiten.  Soll dieser auf 100% "
+"gesetzt werden?"
+
+msgid "Slot"
+msgstr "Slot"
+
+msgid "X-Mirror Bone"
+msgstr "Bone spiegeln"
