Invert selections in batch build and pack projects #258

--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -144,6 +144,9 @@ msgstr ""
 msgid "Select All\tCtrl+A"
 msgstr ""
 
+msgid "Invert Selection"
+msgstr ""
+
 msgid "Enter preset name..."
 msgstr ""
 
