--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -2570,3 +2570,12 @@ msgstr ""
 
 msgid "Rotation"
 msgstr ""
+
+msgid "Masks"
+msgstr ""
+
+msgid "New Mask"
+msgstr ""
+
+msgid "Please enter a new unique name for the mask."
+msgstr ""
