Remove (truly) unused nodes and added Remove Skinning action
"Remove Skinning" disables skinning for all shapes.

Unused nodes are always deleted on save.

--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -2582,3 +2582,9 @@ msgstr ""
 
 msgid "Normalize Weights"
 msgstr ""
+
+msgid "Remove Skinning"
+msgstr ""
+
+msgid "Removes skinning of all shapes and all unused nodes."
+msgstr ""
