--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -2588,3 +2588,12 @@ msgstr ""
 
 msgid "Removes skinning of all shapes and all unused nodes."
 msgstr ""
+
+msgid "Collapse Vertex"
+msgstr ""
+
+msgid "Deletes vertices with no more than three connections, without creating a hole."
+msgstr ""
+
+msgid "The vertex picked has more than three connections."
+msgstr ""
