--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -3012,3 +3012,14 @@ msgstr ""
 
 msgid "The vertex picked has more than three connections."
 msgstr "Das gewählte Vertex hat mehr als drei Verbindungen."
+
+msgid "Delete Unreferenced Nodes"
+msgstr "Unreferenzierte Nodes entfernen"
+
+msgid "Deletes all nodes from the project that aren't used in any other block."
+msgstr ""
+"Entfernt alle Nodes des Projekts, die nicht in keinem anderen Block "
+"verwendet werden."
+
+msgid "%d unreferenced nodes were deleted."
+msgstr "%d unreferenzierte Nodes wurden entfernt."
