Added wireframe color selection to settings
Default rgb(80,80,80) (50% transparent)

--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -2642,6 +2642,12 @@ msgstr "Hintergrundfarbe"
 msgid "Background color of the renderer."
 msgstr "Hintergrundfarbe des Renderers."
 
+msgid "Wireframe Color"
+msgstr "Wireframe-Farbe"
+
+msgid "Wireframe color of the renderer."
+msgstr "Wireframe-Farbe des Renderers."
+
 msgid "Unload Project"
 msgstr "Projekt entladen"
 
