--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.3.1\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -145,6 +145,9 @@ msgid "Select All\tCtrl+A"
 msgstr ""
 
 msgid "Invert Selection"
+msgstr ""
+
+msgid "Invert Selection\tCtrl+I"
 msgstr ""
 
 msgid "Enter preset name..."
